[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Music/Mousehover_soundeffect.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/Images/BackActive.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/CreateActive.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/CreateInactive.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/BackInactive.png" type="Texture" id=6]
[ext_resource path="res://Resources/Images/JoxHeadLogo.png" type="Texture" id=7]
[ext_resource path="res://Scenes/MainScenes/AccountCreationPage.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 1, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 1 )

[node name="CreationPage" type="Node2D"]
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.4883
margin_top = -6.95751
margin_right = 1378.49
margin_bottom = 761.044
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 462.586
margin_top = 36.4983
margin_right = 916.586
margin_bottom = 143.498
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="Label" parent="."]
margin_left = 479.0
margin_top = 226.0
margin_right = 628.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="EmailLabel"]
margin_left = 1.0
margin_top = 39.0
margin_right = 246.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 750.0
margin_top = 227.0
margin_right = 899.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="UsernameLabel"]
margin_top = 37.0
margin_right = 168.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 480.0
margin_top = 310.0
margin_right = 621.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 1 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="PasswordLabel"]
margin_top = 35.0
margin_right = 442.0
margin_bottom = 59.0
secret = true

[node name="ConfirmPasswordLabel" type="Label" parent="."]
margin_left = 480.0
margin_top = 387.498
margin_right = 621.0
margin_bottom = 418.498
custom_fonts/font = SubResource( 1 )
text = "Confirm Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordInput" type="LineEdit" parent="ConfirmPasswordLabel"]
margin_top = 35.0
margin_right = 442.0
margin_bottom = 59.0
secret = true

[node name="CreateButton" type="TextureButton" parent="."]
anchor_top = 0.00757576
anchor_bottom = 0.00757576
margin_left = 480.0
margin_top = 510.0
margin_right = 610.0
margin_bottom = 562.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 478.502
margin_top = 600.0
margin_right = 898.502
margin_bottom = 653.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopoutLabel" type="Label" parent="."]
margin_left = 480.0
margin_top = 458.695
margin_right = 1100.0
margin_bottom = 472.695
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MouseHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 2.0

[connection signal="mouse_entered" from="CreateButton" to="." method="_on_CreateButton_mouse_entered"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
